--- a/Desafios/10_Segunda-Entrega-Proyecto-Final/public/index.html
+++ b/Desafios/10_Segunda-Entrega-Proyecto-Final/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="DC.Language" scheme="RFC1766" content="Spanish">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera entrega</title>
+    <title>Segunda entrega</title>
     <link rel="icon" href="./assets/Logo.svg">
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -15,217 +15,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
-    <!-- responsive -->
-
-    <!-- Mobile big/tablet small -->
-    <link rel="stylesheet" href="./css/mobileBig-tabletSmall.css" media="screen and (min-width: 600px)">
-    <!-- Tablet -->
-    <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width: 800px)">
-    <!-- BigTablet -->
-    <link rel="stylesheet" href="./css/bigTablet.css" media="screen and (min-width: 1024px)">
-    <!-- Laptop -->
-    <link rel="stylesheet" href="./css/laptop.css" media="screen and (min-width: 1440px)">
-
 </head>
 
 <body>
 
     <main>
-        <aside class="opciones">
-
-            <section class="secction__tarjetas">
-
-                <article class="OFF-tarjetaComponent__get-product-Id">
-                    <a class="tarjeta__link-img" href="">
-                        <img src="./assets/img/getProductId.png" alt="">
-                    </a>
-                    <div class="tarjeta__info">
-                        <a href="" class="tarjeta__link-title">
-                            <h1 class="tarjeta__title">
-                                Busca un producto con su ID
-                            </h1>
-                        </a>
-
-                        <p class="tarjeta__text">
-                            Aquí encontraras los las carácteristicas de tu producto buscandolo mediante el ID del
-                            producto.
-                        </p>
-
-                        <form class="tarjeta__form" id="form-Get" method="post">
-                            <label for="id">
-                                <input type="text" name="id" id="id" placeholder="  ID" required />
-                            </label>
-                            <button id="tarjeta__btn-getProduct">
-                                Buscar
-                            </button>
-                        </form>
-
-                    </div>
-                </article>
-
-                <article class="ON-tarjetaComponent__post-product">
-                    <div class="tarjeta__info">
-                        <a href="" class="tarjeta__link-title">
-                            <h1 class="tarjeta__title">
-                                Agrega un nuevo producto
-                            </h1>
-                        </a>
-
-                        <p class="tarjeta__text">
-                            Aqui podras agregar un nuevo producto a la lista de productos ya existente.
-                        </p>
-
-                        <form class="tarjeta__form" id="form-Post" action="/api/productos/" method="POST">
-                            <label for="nombre">
-                                <input type="text" name="nombre" placeholder=" Nombre" required />
-                            </label>
-
-                            <label for="descripcion">
-                                <input type="text" name="descripcion" placeholder=" Descripción" required />
-                            </label>
-
-                            <label for="codigo">
-                                <input type="text" name="codigo" placeholder=" codigo" required />
-                            </label>
-
-                            <label for="foto">
-                                <input type="text" name="foto" placeholder=" URL de la foto" required />
-                            </label>
-
-                            <label for="precio">
-                                <input type="number" name="precio" placeholder=" Precio" required />
-                            </label>
-
-                            <label for="stock">
-                                <input type="number" name="stock" placeholder=" stock" required />
-                            </label>
-                            <button id="tarjeta__btn-postProduct" type="submit">
-                                Agregar
-                            </button>
-                        </form>
-
-                    </div>
-                </article>
-
-                <article class="OFF-tarjetaComponent__put-product-Id">
-                    <a class="tarjeta__link-img" href="">
-                        <img src="./assets/img/putProdutId.png" alt="">
-                    </a>
-                    <div class="tarjeta__info">
-                        <a href="" class="tarjeta__link-title">
-                            <h1 class="tarjeta__title">
-                                Actualiza productos con su ID
-                            </h1>
-                        </a>
-
-                        <p class="tarjeta__text">
-                            Aqui podras actualizar o editar un producto ya existente en la lista de productos.
-                        </p>
-
-                        <form class="tarjeta__form" id="form-Put" method="POST">
-                            <label for="id">
-                                <input type="text" name="id" placeholder=" ID del producto" required />
-                            </label>
-
-                            <label for="nombre">
-                                <input type="text" name="nombre" placeholder=" Nombre" required />
-                            </label>
-
-                            <label for="descripcion">
-                                <input type="text" name="descripcion" placeholder=" Descripción" required />
-                            </label>
-
-                            <label for="codigo">
-                                <input type="text" name="codigo" placeholder=" codigo" required />
-                            </label>
-
-                            <label for="foto">
-                                <input type="text" name="foto" placeholder=" URL de la foto" required />
-                            </label>
-
-                            <label for="precio">
-                                <input type="number" name="precio" placeholder=" Precio" required />
-                            </label>
-
-                            <label for="stock">
-                                <input type="number" name="stock" placeholder=" stock" required />
-                            </label>
-                            <button class="tarjeta__btn" id="tarjeta__btn-putProduct" type="submit">
-                                Modificar
-                            </button>
-                        </form>
-
-                    </div>
-                </article>
-
-                <article class="OFF-tarjetaComponent__delete-product-Id">
-                    <a class="tarjeta__link-img" href="">
-                        <img src="./assets/img/getProductId.png" alt="">
-                    </a>
-                    <div class="tarjeta__info">
-                        <a href="" class="tarjeta__link-title">
-                            <h1 class="tarjeta__title">
-                                Borra un producto con su ID
-                            </h1>
-                        </a>
-
-                        <p class="tarjeta__text">
-                            Aqui puedes borrar el producto que quieras, sabiendo su ID.
-                        </p>
-
-                        <form class="tarjeta__form" id="form-Delete" method="POST">
-                            <label for="id">
-                                <input type="text" name="id" placeholder="  ID" required />
-                            </label>
-                            <button type="submit" id="tarjeta__btn-deleteProduct">Buscar</button>
-                        </form>
-
-                    </div>
-                </article>
-
-            </section>
-
-        </aside>
-
-        <article class="resultados">
-            <div class="superior-resultados">
-                <div class="contenedor__titulo">
-                    <h1 class="title">
-                        Administrador de productos
-                    </h1>
-                    <p class="text">
-                        Selecciona una opción
-                    </p>
-                    <button class="tarjeta__btn" onclick="productosGET()">
-                        Refrescar
-                    </button>
-                </div>
-
-                <div class="contenedor__opciones">
-                    <button class="getProducts" value="0">
-                        <img src="./assets/img/getProductsWhite.png" alt="">
-                        Ver todos los productos
-                    </button>
-                    <button class="getProductId" value="1">
-                        <img src="./assets/img/getProductIdWhite.png" alt="">
-                        Buscar un producto
-                    </button>
-                    <button class="postProduct" value="2">
-                        <img src="./assets/img/postProductWhite.png" alt="">
-                        Agregar un producto
-                    </button>
-                    <button class="putProductId" value="3">
-                        <img src="./assets/img/putProdutIdWhite.png" alt="">
-                        Actualizar un producto
-                    </button>
-                    <button class="deleteProductId" value="4">
-                        <img src="./assets/img/deleteProductIdWhite.png" alt="">
-                        Borrar un producto
-                    </button>
-                </div>
+        <div class="contenedor__titulo">
+            <h1 class="title">
+                Administrador de productos
+            </h1>
+            <p>Bienvenido al administrador de productos de Romeliny</p>
+            <div class="btn__contenedor__administrador">
+                <button class="btn__administrador__resfrescar" onclick="productosGET()">
+                    <ion-icon name="refresh-circle-outline"></ion-icon>
+                    Refrescar
+                </button>
+                <a href="/Carrito.html" class="btn__administrador__carrito">
+                    <ion-icon name="cart-outline"></ion-icon>
+                    Carrito
+                </a>
             </div>
-            <div class="productos"></div>
-        </article>
+        </div>
+
+        <div class="productos"></div>
 
         <section class="tool_bar">
             <div class="tool_bar__container">
@@ -239,6 +51,158 @@
                     <ion-icon name="help-outline"></ion-icon>
                 </button>
             </div>
+        </section>
+
+        <section class="secction__tarjetas">
+
+            <article class="OFF-tarjetaComponent__get-product-Id">
+                <button class="btn-abrir__get-product-id">
+                    <ion-icon name="close-circle-outline"></ion-icon>
+                </button>
+                <div class="tarjeta__info">
+                    <a href="" class="tarjeta__link-title">
+                        <h1 class="tarjeta__title">
+                            Busca un producto con su ID
+                        </h1>
+                    </a>
+
+                    <p class="tarjeta__text">
+                        Aquí encontraras los las carácteristicas de tu producto buscandolo mediante el ID del
+                        producto.
+                    </p>
+
+                    <form class="tarjeta__form" id="form-Get" method="post">
+                        <label for="id">
+                            <input type="text" name="id" id="id" placeholder="  ID" required />
+                        </label>
+                        <button id="tarjeta__btn-getProduct">
+                            Buscar
+                        </button>
+                    </form>
+                </div>
+            </article>
+
+            <article class="OFF-tarjetaComponent__post-product">
+                <div class="tarjeta__info">
+                    <button class="btn-abrir__post-product">
+                        <ion-icon name="close-circle-outline"></ion-icon>
+                    </button>
+                    <a href="" class="tarjeta__link-title">
+                        <h1 class="tarjeta__title">
+                            Agrega un nuevo producto
+                        </h1>
+                    </a>
+
+                    <p class="tarjeta__text">
+                        Aqui podras agregar un nuevo producto a la lista de productos ya existente.
+                    </p>
+
+                    <form class="tarjeta__form" id="form-Post" action="/api/productos/" method="POST">
+                        <label for="nombre">
+                            <input type="text" name="nombre" placeholder=" Nombre" required />
+                        </label>
+
+                        <label for="descripcion">
+                            <input type="text" name="descripcion" placeholder=" Descripción" required />
+                        </label>
+
+                        <label for="codigo">
+                            <input type="text" name="codigo" placeholder=" codigo" required />
+                        </label>
+
+                        <label for="foto">
+                            <input type="text" name="foto" placeholder=" URL de la foto" required />
+                        </label>
+
+                        <label for="precio">
+                            <input type="number" name="precio" placeholder=" Precio" required />
+                        </label>
+
+                        <label for="stock">
+                            <input type="number" name="stock" placeholder=" stock" required />
+                        </label>
+                        <button id="tarjeta__btn-postProduct" type="submit">
+                            Agregar
+                        </button>
+                    </form>
+                </div>
+            </article>
+
+            <article class="OFF-tarjetaComponent__put-product-Id">
+                <button class="btn-abrir__put-product">
+                    <ion-icon name="close-circle-outline"></ion-icon>
+                </button>
+                <div class="tarjeta__info">
+                    <a href="" class="tarjeta__link-title">
+                        <h1 class="tarjeta__title">
+                            Actualiza productos con su ID
+                        </h1>
+                    </a>
+
+                    <p class="tarjeta__text">
+                        Aqui podras actualizar o editar un producto ya existente en la lista de productos.
+                    </p>
+
+                    <form class="tarjeta__form" id="form-Put" method="POST">
+                        <label for="id">
+                            <input class="PutID" type="text" name="id" placeholder=" ID del producto" required />
+                        </label>
+
+                        <label for="nombre">
+                            <input class="PutNombre" type="text" name="nombre" placeholder=" Nombre" required />
+                        </label>
+
+                        <label for="descripcion">
+                            <input class="PutDescripcion" type="text" name="descripcion" placeholder=" Descripción"
+                                required />
+                        </label>
+
+                        <label for="codigo">
+                            <input class="PutCodigo" type="text" name="codigo" placeholder=" codigo" required />
+                        </label>
+
+                        <label for="foto">
+                            <input class="PutFoto" type="text" name="foto" placeholder=" URL de la foto" required />
+                        </label>
+
+                        <label for="precio">
+                            <input class="PutPrecio" type="number" name="precio" placeholder=" Precio" required />
+                        </label>
+
+                        <label for="stock">
+                            <input class="PutStock" type="number" name="stock" placeholder=" stock" required />
+                        </label>
+                        <button class="tarjeta__btn" id="tarjeta__btn-putProduct" type="submit">
+                            Modificar
+                        </button>
+                    </form>
+                </div>
+            </article>
+
+            <article class="OFF-tarjetaComponent__delete-product-Id">
+                <button class="btn-abrir__put-product">
+                    <ion-icon name="close-circle-outline"></ion-icon>
+                </button>
+                <a class="tarjeta__link-img" href="">
+                    <img src="./assets/img/getProductId.png" alt="">
+                </a>
+                <div class="tarjeta__info">
+                    <a href="" class="tarjeta__link-title">
+                        <h1 class="tarjeta__title">
+                            Borra un producto con su ID
+                        </h1>
+                    </a>
+                    <p class="tarjeta__text">
+                        ¿Seguro que quieres eliminar el producto?
+                    </p>
+                    <form class="tarjeta__form" id="form-Delete" method="POST">
+                        <label for="id">
+                            <input type="text" name="id" placeholder="  ID" required />
+                        </label>
+                        <button type="submit" id="tarjeta__btn-deleteProduct">ELIMINAR</button>
+                    </form>
+                </div>
+            </article>
         </section>
 
     </main>
